improving hudson statistics